--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aran-amor-cuenta-atras</title>
+    <title>Alberto y Mariona</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="aran-amor-cuenta-atras" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="alberto-y-mariona" />
+    <meta property="og:description" content="Boda Alberto y Mariona" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
